# GPos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gpos-build.sh  readthedocs.yml  requirements.txt
.github/workflows/: gcc.sh  linux.yml
docs/: Doxyfile  Makefile  README.md  gpos-docs-build.sh  gpos-doxy-build.sh  gpos.tag  header.html  requirements.txt
docs/src/: conf.py  index.rst
docs/src/building/: cori.rst  index.rst  linux.rst  spack.rst
docs/src/doxygen/: doxygen.rst
docs/src/example/: example.rst  figs.rst  index.rst
docs/src/intro/: intro.rst
docs/src/structure/: structure.rst
docs/src/validation/: bremsstrahlung.rst  data.txt  index.rst  lens.rst
docs/src/visualization/: visualization.rst
example/: gpos-run.sh  gpos_funcs.py  gpos_plot.py  gpos_test.py  input.txt
include/: Beam.hpp  CFoil.hpp  CWorld.hpp  GPos.hpp  MyActionInitialization.hpp  MyDetectorConstruction.hpp  MyEventAction.hpp  MyPrimaryGeneratorAction.hpp  MyRunAction.hpp  MyUserSteppingAction.hpp  OutputOPMD.hpp  OutputTXT.hpp  Part.hpp  Properties.hpp  Query.hpp
src/: Beam.cc  CFoil.cc  CWorld.cc  GPos.cc  MyActionInitialization.cc  MyDetectorConstruction.cc  MyEventAction.cc  MyPrimaryGeneratorAction.cc  MyRunAction.cc  MyUserSteppingAction.cc  OutputOPMD.cc  OutputTXT.cc  Part.cc  Properties.cc  Query.cc
